add some resoures and design login screen

--- a/app/src/main/res/layout/fragment_driver_dashboard.xml
+++ b/app/src/main/res/layout/fragment_driver_dashboard.xml
@@ -76,7 +76,7 @@
                 android:includeFontPadding="false"
                 android:text="@string/no_passengers"
                 android:gravity="center"
-                android:textColor="@color/color_light_grey"
+                android:textColor="@color/com.example.taxify.style.color_light_grey"
                 android:textSize="36sp" />
 
             <Button
@@ -84,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/check_again"
-                app:backgroundTint="@color/color_primary"
+                app:backgroundTint="@color/com.example.taxify.style.color_primary"
                 android:id="@+id/checkAgainBT"
                 />
         </LinearLayout>
@@ -177,7 +177,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/color_primary"
+                android:backgroundTint="@color/com.example.taxify.style.color_primary"
                 android:id="@+id/chatButton"
                 android:text="@string/contact_passenger"
                 android:textSize="16sp"
