--- a/app/src/main/res/layout/fragment_passenger_dashboard.xml
+++ b/app/src/main/res/layout/fragment_passenger_dashboard.xml
@@ -52,7 +52,7 @@
             android:textSize="18sp"
             android:fontFamily="@font/poppins_regular"
             android:textColor="@android:color/black"
-            app:backgroundTint="@color/color_light_grey"
+            app:backgroundTint="@color/com.example.taxify.style.color_light_grey"
             app:layout_constraintTop_toBottomOf="@id/destinationTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -178,7 +178,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/color_primary"
+                android:backgroundTint="@color/com.example.taxify.style.color_primary"
                 android:id="@+id/chatButton"
                 android:text="@string/contact_driver"
                 android:textSize="16sp"
