--- a/app/src/main/res/layout/view_ride_complete.xml
+++ b/app/src/main/res/layout/view_ride_complete.xml
@@ -30,7 +30,7 @@
         android:text="@string/return_to_dashboard"
         android:textSize="14sp"
         android:fontFamily="@font/poppins_medium"
-        android:textColor="@color/color_primary"
+        android:textColor="@color/com.example.taxify.style.color_primary"
         android:includeFontPadding="false"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:layout_constraintEnd_toEndOf="parent"
