--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color_primary">#00BCD4</color>
-    <color name="color_light_grey">#616161</color>
+    <color name="com.example.taxify.style.color_primary">#00BCD4</color>
+    <color name="com.example.taxify.style.color_light_grey">#616161</color>
     <color name="color_red">#FF1300</color>
 </resources>
