--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -30,7 +30,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/unter"
+            android:text="@string/taxify"
             android:textSize="18sp"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@android:color/black"
